@@ -6,6 +6,7 @@ with respect to new features and compatibility changes.
 
 2017-10-04
  * check_privilege in Wing::Role::Result::Field now will also describe the field if it is privileged.
+ * No longer hiding an error sending an email.
 
 2017-09-25
  * No longer sending Dancer server tokens.
